# tobe-mcp

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
src/: __init__.py  logger.py  server.py
src/prompts/: article_writer.py  developer.py  english_teacher.py  ui_designer.py
