[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tobe-mcp"
version = "0.1.0"
description = "A Python MCP server providing useful tools and prompts to improve development efficiency"
readme = "README.md"
license = {file = "tobe-mcp/LICENSE"}
requires-python = ">=3.8"
dependencies = [
    "mcp>=1.13.1",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.0.0",
    "flake8>=6.0.0",
]

[project.scripts]
tobe-mcp = "tobe_mcp.server:main"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"] 